Fix margin for hero tags to eliminate spacing between consecutive items

--- a/assets/css/blog-post.css
+++ b/assets/css/blog-post.css
@@ -78,6 +78,9 @@
     padding: 0;
     margin: 0;
 }
+.hero-tags li + li {
+    margin-top: 0;
+}
 
 .hero-aside {
     display: grid;
